samples/_failures_safe/1761532041_4724a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41cde7f9.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_41cde7f9.c:154:25: error: expected ‘)’ at end of input
  154 |     if (mat->rows != mat
      |        ~                ^
      |                         )
./samples/SAFE/__tmp_41cde7f9.c:154:5: error: expected declaration or statement at end of input
  154 |     if (mat->rows != mat
      |     ^~
